--- a/frontend/pages/css/chefProfile.css
+++ b/frontend/pages/css/chefProfile.css
@@ -127,6 +127,7 @@ body {
     justify-content: center; 
     align-items: center;
     backdrop-filter: blur(3px);
+    z-index: 1000;
 }
 
 .hidden {
