--- a/frontend/pages/css/chefProfile.css
+++ b/frontend/pages/css/chefProfile.css
@@ -105,14 +105,14 @@ body {
 }
 
 .settings-btn {
-    position: fixed;
+    position: absolute;
     top: 110px;
     right: 40px;
     background: none;
     border: none;
     font-size: 28px;
     cursor: pointer;
-    z-index: 200;
+    z-index: 50;
 }
 
 /* Modal */
