--- a/frontend/pages/css/profile.css
+++ b/frontend/pages/css/profile.css
@@ -95,25 +95,35 @@ body {
 
 .settings-btn {
     color: var(--text-dark);
+    width: 50px;
+    height: 50px;
     position: absolute;
-    top: 110px;
-    right: 100px;
+    top: 160px;
+    right: 23%;
     background: none;
+    background-color: white;
     border: none;
     font-size: 28px;
     cursor: pointer;
-    z-index: 50;
+    z-index: 0;
+    border-radius: 50%;
+    padding: 10px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
 }
 
 /* Modal */
 .modal-overlay {
     position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background: rgba(0,0,0,0.4);
     display: flex;
-    justify-content: center; align-items: center;
+    justify-content: center;
+    align-items: center;
     backdrop-filter: blur(3px);
+    z-index: 1000;
 }
 
 .hidden {
@@ -298,8 +308,10 @@ body {
 
     /* Repositioning settings button for mobile */
     .settings-btn {
-        top: 85px; right: 20px;
-        font-size: 24px;
-        width: 50px; height: 50px;
+        top: 110px; 
+        right: 40px;
+        font-size: 28px;
+        width: 50px;
+        height: 50px;
     }
 }
